2009-01-07  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.25.5

==================== 2.25.4 ====================

2009-01-07  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.25.4

2009-01-04  Stef Walter  <stef@memberwebs.com>

	* configure.in:
	* pkcs11/seahorse-pkcs11-module.c: Update for new gp11 library changes.
	Depend on gnome-keyring 2.25.4

2008-12-30  Stef Walter  <stef@memberwebs.com>

	* configure.in:
	* pkcs11/seahorse-pkcs11-object.c: Make seahorse depend on gnome-keyring
	HEAD (ie: 2.25.3), and fix build problems because of GP11 changes.
	
2008-12-22  Adam Schreiber  <sadam@clemson.edu>

    * ssh/seahorse-ssh-generate.c: Dont' destroy swidget immediately.
    Patch from Jeff Cai.  Fixes bug #562413

== Seahorse 2.25.3 ==

2008-12-19  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * Makefile.am:
    * NEWS:
    * README: 
    * pkcs11/Makefile.am:
    * po/POTFILES.in: Release 2.25.3

2008-12-17  Stef Walter  <stef@memberwebs.com>

	* configure.in: Build fix. Fixes bug #564815

2008-12-16  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-object.c:
	* gkr/seahorse-gkr-item.c:
	* gkr/seahorse-gkr-keyring.c: 
	* pgp/seahorse-pgp-uid.c: Allow 'tag' property to be directly set.
	This is useful for matching in predicates.
	
	* gkr/seahorse-gkr-item-commands.c:
	* gkr/seahorse-gkr-keyring-commands.c:
	* libseahorse/seahorse-types.h:
	* libseahorse/seahorse-view.c:
	* libseahorse/seahorse-view.h:
	* pgp/seahorse-pgp-commands.c:
	* pkcs11/seahorse-pkcs11-commands.c:
	* src/seahorse-key-manager.c:
	* src/seahorse-viewer.c:
	* src/seahorse-viewer.h:
	* ssh/seahorse-ssh-commansd.c: Use predicates to enable and disable 
	commands in the view. Fine tune exporting and deleting based on exportable and 
	deletable flags. Select objects being operated on, when not all 
	objects apply for the current operation. Hide commands that are not
	applicable for the currently selected objects. 
	