@@ -1,3 +1,9 @@
+2009-01-14  Magnus Boman  <captain.magnus@gmail.com>
+
+	* common/seahorse-registry.c (lookup_category_values),
+	(seahorse_registry_lookup_function): Fix bug #565649 (64bit
+	portability issue)
+
 2009-01-07  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: post-release bump to 2.25.5
